--- a/ASP.NETCoreCustomArch/src/ASP.NETCoreCustomArch.Web/Views/Shared/_Layout.cshtml
+++ b/ASP.NETCoreCustomArch/src/ASP.NETCoreCustomArch.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/>
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position"
+              asp-fallback-test-value="absolute"/>
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/>
     </environment>
 </head>
@@ -54,14 +55,14 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.2.1.min.js"
             asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
             asp-fallback-test="window.jQuery">
-        </script>
+    </script>
     <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
             asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-        </script>
+    </script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
 </environment>
 
-@await RenderSectionAsync("scripts", required: false).ConfigureAwait(false)
+@await RenderSectionAsync("scripts", false).ConfigureAwait(false)
 </body>
 </html>
